added_page_tree

--- a/rush.html
+++ b/rush.html
@@ -14,12 +14,12 @@
 
 	<div id="container">
 		<div id="header">
-			<div id="banner">OurCompany</div>
+			<a href="rush.html"><div id="banner">OurCompany</div></a>
 			<div>
 				<ul id="header-links">
-					<a href="#" class="header-link">Home</a>
-					<a href="#" class="header-link">About</a>
-					<a href="#" class="header-link">Services</a>
+					<a href="rush.html" class="header-link">Home</a>
+					<a href="src/about.html" class="header-link">About</a>
+					<a href="src/services.html" class="header-link">Services</a>
 				</ul>
 			</div>
 		</div>
@@ -38,15 +38,28 @@
 				è tratta da un passaggio della sezione 1.10.32.
 			</p>
 		</div>
-		<hr>
+
 		<div id="footer">
 			<div id="credits">
-				<ul class="credits-section">
-					<a href="#"><li>linkedin</li></a>
-					<a href="#"><li>about</li></a>
-					<a href="#"><li>servizi</li></a>
-					<a href="#"><li>mission</li></a>
-				</ul>
+				<div>
+					<ul class="credits-section">
+						<a href="#" class="a-credits"><li>linkedin</li></a>
+						<a href="#" class="a-credits"><li>about</li></a>
+						<a href="#" class="a-credits"><li>servizi</li></a>
+						<a href="#" class="a-credits"><li>mission</li></a>
+					</ul>
+				</div>
+				<div>
+					<ul class="credits-section">
+						<a href="#" class="a-credits"><li>linkedin</li></a>
+						<a href="#" class="a-credits"><li>about</li></a>
+						<a href="#" class="a-credits"><li>servizi</li></a>
+						<a href="#" class="a-credits"><li>mission</li></a>
+					</ul>
+				</div>
+				<div id="hero-icons">
+					<p>icons</p>
+				</div>
 			</div>
 		</div>
 	</div>
