added_dropdown_navbar

--- a/rush.html
+++ b/rush.html
@@ -11,10 +11,10 @@
 	<title>Rush</title>
 </head>
 <body>
-
 	<div id="container">
 		<div id="header">
 			<a href="rush.html"><div id="banner">OurCompany</div></a>
+			
 			<div>
 				<ul id="header-links">
 					<a href="rush.html" class="header-link">Home</a>
@@ -22,6 +22,18 @@
 					<a href="src/services.html" class="header-link">Services</a>
 				</ul>
 			</div>
+
+			<div id="collapse">
+				<div class="dropdown">
+					<button class="dropbtn">Panino al prosciutto e formaggio</button>
+					<div class="dropdown-content">
+						<a href="file:///nfs/homes/mailinci/repo/discovery_piscine/cell01/ex03/piscineweb.html">Video Meme</a>
+						<a href="file:///nfs/homes/mailinci/repo/discovery_piscine/cell01/ex04/basics.html">$uper $hop</a>
+						<a href="file:///nfs/homes/mailinci/repo/discovery_piscine/cell02/ex00/responsive.html">Pillole</a>
+					</div>
+				</div>
+			</div>
+
 		</div>
 
 		<div class="parallax-img">
@@ -40,8 +52,9 @@
 		</div>
 
 		<div id="footer">
-			<div id="credits">
-				<div>
+			<div id="credits" class="row">
+
+				<div class="col-md-3 col-sm-6">
 					<ul class="credits-section">
 						<a href="#" class="a-credits"><li>linkedin</li></a>
 						<a href="#" class="a-credits"><li>about</li></a>
@@ -49,7 +62,7 @@
 						<a href="#" class="a-credits"><li>mission</li></a>
 					</ul>
 				</div>
-				<div>
+				<div class="col-md-3 col-sm-6">
 					<ul class="credits-section">
 						<a href="#" class="a-credits"><li>linkedin</li></a>
 						<a href="#" class="a-credits"><li>about</li></a>
@@ -57,9 +70,11 @@
 						<a href="#" class="a-credits"><li>mission</li></a>
 					</ul>
 				</div>
-				<div id="hero-icons">
+
+				<div id="hero-icons" class="col-md-3 col-sm-12">
 					<p>icons</p>
 				</div>
+
 			</div>
 		</div>
 	</div>
