--- a/rush.html
+++ b/rush.html
@@ -15,9 +15,9 @@
 		<div id="header">
 			<a href="rush.html"><div id="banner">OurCompany</div></a>
 			
-			<div>
+			<div id="link-section">
 				<ul id="header-links">
-					<a href="rush.html" class="header-link">Home</a>
+					<a href="" class="header-link">Home</a>
 					<a href="src/about.html" class="header-link">About</a>
 					<a href="src/services.html" class="header-link">Services</a>
 				</ul>
@@ -25,11 +25,11 @@
 
 			<div id="collapse">
 				<div class="dropdown">
-					<button class="dropbtn">Panino al prosciutto e formaggio</button>
+					<button class="dropbtn"><i class="fa-solid fa-bars"></i></button>
 					<div class="dropdown-content">
-						<a href="file:///nfs/homes/mailinci/repo/discovery_piscine/cell01/ex03/piscineweb.html">Video Meme</a>
-						<a href="file:///nfs/homes/mailinci/repo/discovery_piscine/cell01/ex04/basics.html">$uper $hop</a>
-						<a href="file:///nfs/homes/mailinci/repo/discovery_piscine/cell02/ex00/responsive.html">Pillole</a>
+						<a href="rush.html">Home</a>
+						<a href="src/about.html">About</a>
+						<a href="src/services.html">Services</a>
 					</div>
 				</div>
 			</div>
