--- a/rush.html
+++ b/rush.html
@@ -72,7 +72,12 @@
 				</div>
 
 				<div id="hero-icons" class="col-md-3 col-sm-12">
-					<p>icons</p>
+					<ul id="icon-list">
+						<i class="fas fa-envelope"></i>
+						<i class="fa-brands fa-github"></i>
+						<i class="fa-brands fa-instagram"></i>
+						<i class="fa-brands fa-youtube"></i>
+					</ul>
 				</div>
 
 			</div>
