--- a/rush.html
+++ b/rush.html
@@ -12,16 +12,19 @@
 </head>
 <body>
 	<div id="container">
+		
 		<div id="header">
-			<a href="rush.html"><div id="banner">OurCompany</div></a>
-			
-			<div id="link-section">
-				<ul id="header-links">
-					<a href="" class="header-link">Home</a>
-					<a href="src/about.html" class="header-link">About</a>
-					<a href="src/services.html" class="header-link">Services</a>
-				</ul>
-			</div>
+			<a href="rush.html">
+				<div id="banner">
+					OurCompany
+				</div>
+			</a>
+
+			<ul id="header-links">
+				<a href="" class="header-link">Home</a>
+				<a href="src/about.html" class="header-link">About</a>
+				<a href="src/services.html" class="header-link">Services</a>
+			</ul>
 
 			<div id="collapse">
 				<div class="dropdown">
