--- a/rush.html
+++ b/rush.html
@@ -45,12 +45,7 @@
 
 		<div class="content">
 			<p class="flavour-text">
-				Al contrario di quanto si pensi, Lorem Ipsum non è semplicemente una sequenza casuale di caratteri.
-				Risale ad un classico della letteratura latina del 45 AC, cosa che lo rende vecchio di 2000 anni. Richard McClintock,
-				professore di latino al Hampden-Sydney College in Virginia, ha ricercato una delle più oscure parole latine, consectetur, da un passaggio del Lorem Ipsum e ha scoperto tra i vari testi in cui è citata,
-				la fonte da cui è tratto il testo, le sezioni 1.10.32 and 1.10.33 del "de Finibus Bonorum et Malorum" di Cicerone.
-				Questo testo è un trattato su teorie di etica, molto popolare nel Rinascimento. La prima riga del Lorem Ipsum, "Lorem ipsum dolor sit amet..",
-				è tratta da un passaggio della sezione 1.10.32.
+				Presso OurCompany, ci impegniamo a guidare l'innovazione attraverso un approccio centrato sulle persone, alimentato dalla passione per l'eccellenza e la responsabilità sociale. La nostra missione è creare un ambiente di lavoro che celebri la diversità, promuova la crescita professionale e personale dei nostri dipendenti e ispiri fiducia e trasparenza in ogni interazione.
 			</p>
 		</div>
 
