--- a/rush.html
+++ b/rush.html
@@ -28,24 +28,21 @@
 			font-weight: 700;
 			width: 100%;
 			text-align: center;
-			background: rgb(13, 17, 5);
+			background: rgb(6, 5, 32);
 			position: relative;
 			animation: text 3s 1;
 			letter-spacing: 3px;
+			margin-top: -6rem;
 		}
 		@keyframes text {
 			0% {
-				color: black;
 				letter-spacing: 4px;
-				margin-bottom: -5px;
 			}
 			30% {
 				letter-spacing: 6px;
-				margin-bottom: -7px;
 			}
 			85% {
 				letter-spacing: 3px;
-				margin-bottom: -10px;
 			}
 		}
 	</style>
