--- a/rush.html
+++ b/rush.html
@@ -33,6 +33,9 @@
 			animation: text 3s 1;
 			letter-spacing: 3px;
 			margin-top: -6rem;
+			animation-iteration-count: infinite;
+			align-self: baseline;
+			padding: 1.5%;
 		}
 		@keyframes text {
 			0% {
@@ -85,11 +88,13 @@
 			<span class="text1">Are you looking for Web Solutions?</span>
 		</div>
 
+		<button id="call-to-action"></button>
+
 		<div class="content">
 			<p class="flavour-text">
 				Presso OurCompany, ci impegniamo a guidare l'innovazione attraverso un approccio centrato sulle persone, alimentato dalla passione per l'eccellenza e la responsabilità sociale. La nostra missione è creare un ambiente di lavoro che celebri la diversità, promuova la crescita professionale e personale dei nostri dipendenti e ispiri fiducia e trasparenza in ogni interazione.
-
-Con un focus costante sull'innovazione, ci adoperiamo per superare costantemente gli standard, anticipando le esigenze del mercato e abbracciando nuove sfide con creatività e determinazione. Attraverso una cultura aziendale inclusiva e collaborativa, incoraggiamo il libero scambio di idee e il rispetto reciproco, creando così un ambiente in cui ognuno possa dare il meglio di sé. Con un impegno senza compromessi verso l'integrità e l'etica professionale, ci sforziamo di essere un faro di fiducia e affidabilità per i nostri clienti, partner e la comunità in generale.
+				Con un focus costante sull'innovazione, ci adoperiamo per superare costantemente gli standard, anticipando le esigenze del mercato e abbracciando nuove sfide con creatività e determinazione. Attraverso una cultura aziendale inclusiva e collaborativa, incoraggiamo il libero scambio di idee e il rispetto reciproco, creando così un ambiente in cui ognuno possa dare il meglio di sé. 
+				Con un impegno senza compromessi verso l'integrità e l'etica professionale, ci sforziamo di essere un faro di fiducia e affidabilità per i nostri clienti, partner e la comunità in generale.
 			</p>
 		</div>
 
