--- a/src/about.html
+++ b/src/about.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<script src="https://kit.fontawesome.com/3d79c68617.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="../rush.css">
+	<title>About</title>
+
     <title>I nostri Principi</title>
     <style>
         body {
@@ -51,6 +54,35 @@
 </head>
 
 <body>
+
+    <div id="header">
+			
+        <a href="rush.html">
+            <div id="banner">
+                OurCompany
+            </div>
+        </a>
+
+        <ul id="header-links">
+            <a href="../rush.html" class="header-link">Home</a>
+            <a href="about.html" class="header-link">About</a>
+            <a href="../src/services.html" class="header-link">Services</a>
+        </ul>
+
+        <div id="collapse">
+            <div class="dropdown">
+                <button class="dropbtn"><i class="fa-solid fa-bars"></i></button>
+                <div class="dropdown-content">
+                    <a href="../rush.html">Home</a>
+                    <a href="about.html">About</a>
+                    <a href="../src/services.html">Services</a>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+
     <div class="container">
         <table>
             <thead>
@@ -181,8 +213,14 @@
                 </tr>
             </tbody>
         </table>
-
     </div>
-</body>
 
+    
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+
+
+</body>
 </html>
