--- a/src/services.html
+++ b/src/services.html
@@ -2,6 +2,12 @@
 
 <head>
     <title>Services</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<script src="https://kit.fontawesome.com/3d79c68617.js" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="../rush.css">
+
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -34,6 +40,35 @@
     </style>
 </head>
 <body>
+
+    <div id="header">
+			
+        <a href="rush.html">
+            <div id="banner">
+                OurCompany
+            </div>
+        </a>
+
+        <ul id="header-links">
+            <a href="../rush.html" class="header-link">Home</a>
+            <a href="../src/about.html" class="header-link">About</a>
+            <a href="services.html" class="header-link">Services</a>
+        </ul>
+
+        <div id="collapse">
+            <div class="dropdown">
+                <button class="dropbtn"><i class="fa-solid fa-bars"></i></button>
+                <div class="dropdown-content">
+                    <a href="../rush.html">Home</a>
+                    <a href="../about.html">About</a>
+                    <a href="services.html">Services</a>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+
     <div class="container">
         <div class="service-box">
             <img class="service-img" src="../img/software_su_misura.png">
@@ -77,5 +112,43 @@
         </div>
 
     </div>
+
+    <div id="footer">
+        <div id="credits" class="row">
+
+            <div class="col-md-3 col-sm-6">
+                <ul class="credits-section">
+                    <a href="#" class="a-credits"><li>linkedin</li></a>
+                    <a href="#" class="a-credits"><li>about</li></a>
+                    <a href="#" class="a-credits"><li>servizi</li></a>
+                    <a href="#" class="a-credits"><li>mission</li></a>
+                </ul>
+            </div>
+            <div class="col-md-3 col-sm-6">
+                <ul class="credits-section">
+                    <a href="#" class="a-credits"><li>linkedin</li></a>
+                    <a href="#" class="a-credits"><li>about</li></a>
+                    <a href="#" class="a-credits"><li>servizi</li></a>
+                    <a href="#" class="a-credits"><li>mission</li></a>
+                </ul>
+            </div>
+
+            <div id="hero-icons" class="col-md-3 col-sm-12">
+                <ul id="icon-list">
+                    <i class="fas fa-envelope"></i>
+                    <i class="fa-brands fa-github"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-youtube"></i>
+                </ul>
+            </div>
+
+        </div>
+    </div>
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+
+
 </body>
 </html>
