--- a/rush.html
+++ b/rush.html
@@ -88,7 +88,11 @@
 			<span class="text1">Are you looking for Web Solutions?</span>
 		</div>
 
-		<button id="call-to-action"></button>
+		<div class=".action">
+			<button id="call-to-action" class="glow-on-hover" type="button">
+				<a class="mod" href="src/services.html"><p>Click Here!</p></a>
+			</button>
+		</div>
 
 		<div class="content">
 			<p class="flavour-text">
@@ -96,6 +100,10 @@
 				Con un focus costante sull'innovazione, ci adoperiamo per superare costantemente gli standard, anticipando le esigenze del mercato e abbracciando nuove sfide con creatività e determinazione. Attraverso una cultura aziendale inclusiva e collaborativa, incoraggiamo il libero scambio di idee e il rispetto reciproco, creando così un ambiente in cui ognuno possa dare il meglio di sé. 
 				Con un impegno senza compromessi verso l'integrità e l'etica professionale, ci sforziamo di essere un faro di fiducia e affidabilità per i nostri clienti, partner e la comunità in generale.
 			</p>
+		</div>
+
+		<div class="parallax-img">
+			<p id="img2"></p>
 		</div>
 
 		<div id="footer">
