--- a/rush.html
+++ b/rush.html
@@ -125,10 +125,10 @@
 
 				<div id="hero-icons" class="col-md-3 col-sm-12">
 					<ul id="icon-list">
-						<i class="fas fa-envelope"></i>
-						<i class="fa-brands fa-github"></i>
-						<i class="fa-brands fa-instagram"></i>
-						<i class="fa-brands fa-youtube"></i>
+						<i class="ico fas fa-envelope"></i>
+						<i class="ico fa-brands fa-github"></i>
+						<i class="ico fa-brands fa-instagram"></i>
+						<i class="ico fa-brands fa-youtube"></i>
 					</ul>
 				</div>
 
