fixed links, changed image, fixed minor issues

--- a/src/services.html
+++ b/src/services.html
@@ -60,7 +60,7 @@
                 <button class="dropbtn"><i class="fa-solid fa-bars"></i></button>
                 <div class="dropdown-content">
                     <a href="../rush.html">Home</a>
-                    <a href="../about.html">About</a>
+                    <a href="../src/about.html">About</a>
                     <a href="services.html">Services</a>
                 </div>
             </div>
