external_pages_fixed

--- a/src/about.html
+++ b/src/about.html
@@ -16,7 +16,7 @@
             font-family: Arial, sans-serif;
         }
 
-        .container {
+        .content{
             max-width: 100%;
             overflow-x: hidden;
         }
@@ -83,7 +83,7 @@
     </div>
 
 
-    <div class="container">
+    <div class="content">
         <table>
             <thead>
                 <tr>
