--- a/src/services.html
+++ b/src/services.html
@@ -16,9 +16,9 @@
             background-color: #f4f4f4;
             color: #333;
         }
-        .container {
+        .content {
             max-width: 1200px;
-            margin: 50px auto;
+            /* margin: 50px auto; */
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
@@ -41,114 +41,114 @@
 </head>
 <body>
 
-    <div id="header">
-			
-        <a href="rush.html">
-            <div id="banner">
-                OurCompany
-            </div>
-        </a>
+    <div id="container">
+        <div id="header">
+            <a href="../rush.html">
+                <div id="banner">
+                    OurCompany
+                </div>
+            </a>
 
-        <ul id="header-links">
-            <a href="../rush.html" class="header-link">Home</a>
-            <a href="../src/about.html" class="header-link">About</a>
-            <a href="services.html" class="header-link">Services</a>
-        </ul>
+            <ul id="header-links">
+                <a href="../rush.html" class="header-link">Home</a>
+                <a href="../src/about.html" class="header-link">About</a>
+                <a href="services.html" class="header-link">Services</a>
+            </ul>
 
-        <div id="collapse">
-            <div class="dropdown">
-                <button class="dropbtn"><i class="fa-solid fa-bars"></i></button>
-                <div class="dropdown-content">
-                    <a href="../rush.html">Home</a>
-                    <a href="../about.html">About</a>
-                    <a href="services.html">Services</a>
+            <div id="collapse">
+                <div class="dropdown">
+                    <button class="dropbtn"><i class="fa-solid fa-bars"></i></button>
+                    <div class="dropdown-content">
+                        <a href="../rush.html">Home</a>
+                        <a href="../about.html">About</a>
+                        <a href="services.html">Services</a>
+                    </div>
                 </div>
             </div>
         </div>
 
-    </div>
 
-
-    <div class="container">
-        <div class="service-box">
-            <img class="service-img" src="../img/software_su_misura.png">
-            <h3>Software su Misura</h3>
-            <p>Offriamo servizi di sviluppo software su misura, progettati per soddisfare esattamente le esigenze e i requisiti specifici dei nostri clienti. Utilizzando le ultime tecnologie e pratiche di sviluppo agile, ci impegniamo a fornire soluzioni software di alta qualità, affidabili e scalabili.
-               La nostra attenzione ai dettagli e l'approccio orientato alle persone assicurano che ogni soluzione software sia perfettamente adattata alle esigenze del cliente, garantendo risultati eccezionali e soddisfazione a lungo termine.</p>
-        </div>
-        <div class="service-box">
-            <img class="service-img" src="../img/mobile.png">
-            <h3>Esperienze Mobili Intuitive</h3>
-            <p>Creiamo app mobile coinvolgenti e intuitive che offrono esperienze utente straordinarie su piattaforme iOS e Android. Dal concept all'implementazione, lavoriamo in stretta collaborazione con i nostri clienti per trasformare le loro visioni in realtà digitali innovative.
-               Con un'attenzione particolare all'usabilità e al design centrato sull'utente, le nostre app mobile offrono un'esperienza fluida e soddisfacente che supera le aspettative degli utenti e massimizza il coinvolgimento.</p>
-        </div>
-        <div class="service-box">
-            <img class="service-img" src="../img/online.png">
-            <h3>Presenza Online Perfetta</h3>
-            <p>Realizziamo siti web accattivanti, funzionali e altamente performanti che riflettono l'identità unica dei nostri clienti e li aiutano a raggiungere i loro obiettivi commerciali. Con una combinazione di design creativo e sviluppo tecnologico avanzato, creiamo siti web che lasciano un'impressione duratura.
-               La nostra attenzione al dettaglio e l'approccio personalizzato garantiscono che ogni sito web sia ottimizzato per la massima visibilità online e un'esperienza utente superiore, generando risultati tangibili per i nostri clienti.</p>
-        </div>
-        <div class="service-box">
-            <img class="service-img" src="../img/data.png">
-            <h3>Protezione Totale dei Dati</h3>
-            <p>Offriamo soluzioni di sicurezza informatica avanzate per proteggere i dati sensibili e le risorse digitali dei nostri clienti da minacce interne ed esterne. Attraverso una combinazione di analisi approfondita dei rischi, implementazione di controlli di sicurezza e monitoraggio continuo, garantiamo la massima sicurezza e conformità.
-               La nostra esperienza e competenza nel campo della sicurezza informatica ci consentono di creare soluzioni personalizzate e scalabili che si adattano alle esigenze specifiche di ogni cliente, garantendo la massima protezione e tranquillità.</p>
-        </div>
-        <div class="service-box">
-            <img class="service-img" src="../img/ai.png">
-            <h3>Analisi Dati e AI</h3>
-            <p>Utilizziamo l'analisi dei dati e l'intelligenza artificiale per aiutare i nostri clienti a trarre valore dalle loro risorse dati, fornendo insight approfonditi e informazioni preziose per supportare decisioni strategiche e operazioni aziendali.
-               La nostra esperienza nell'analisi dei dati e nell'intelligenza artificiale ci consente di sviluppare soluzioni su misura che soddisfano le esigenze specifiche dei nostri clienti, consentendo loro di ottenere vantaggi competitivi e fare passi avanti nel loro settore.</p>
-        </div>
-        <div class="service-box">
-            <img class="service-img" src="../img/rota.jpg">
-            <h3>Digitalizzazione e Automazione</h3>
-            <p>Aiutiamo le aziende a trasformare i loro processi aziendali attraverso la digitalizzazione e l'automazione, migliorando l'efficienza operativa, riducendo i costi e creando nuove opportunità di crescita. Utilizzando tecnologie all'avanguardia e best practice di settore, supportiamo i nostri clienti in ogni fase del loro viaggio di trasformazione digitale.
-               La nostra esperienza e competenza nella digitalizzazione e nell'automazione ci consentono di fornire soluzioni su misura che massimizzano il valore per i nostri clienti, consentendo loro di rimanere competitivi e rilevanti in un mondo sempre più digitalizzato.</p>
-        </div>
-
-        <div>
-            <img src="../img/technomedit.png">
-        </div>
-
-    </div>
-
-    <div id="footer">
-        <div id="credits" class="row">
-
-            <div class="col-md-3 col-sm-6">
-                <ul class="credits-section">
-                    <a href="#" class="a-credits"><li>linkedin</li></a>
-                    <a href="#" class="a-credits"><li>about</li></a>
-                    <a href="#" class="a-credits"><li>servizi</li></a>
-                    <a href="#" class="a-credits"><li>mission</li></a>
-                </ul>
+        <div class="content">
+            <div class="service-box">
+                <img class="service-img" src="../img/software_su_misura.png">
+                <h3>Software su Misura</h3>
+                <p>Offriamo servizi di sviluppo software su misura, progettati per soddisfare esattamente le esigenze e i requisiti specifici dei nostri clienti. Utilizzando le ultime tecnologie e pratiche di sviluppo agile, ci impegniamo a fornire soluzioni software di alta qualità, affidabili e scalabili.
+                La nostra attenzione ai dettagli e l'approccio orientato alle persone assicurano che ogni soluzione software sia perfettamente adattata alle esigenze del cliente, garantendo risultati eccezionali e soddisfazione a lungo termine.</p>
             </div>
-            <div class="col-md-3 col-sm-6">
-                <ul class="credits-section">
-                    <a href="#" class="a-credits"><li>linkedin</li></a>
-                    <a href="#" class="a-credits"><li>about</li></a>
-                    <a href="#" class="a-credits"><li>servizi</li></a>
-                    <a href="#" class="a-credits"><li>mission</li></a>
-                </ul>
+            <div class="service-box">
+                <img class="service-img" src="../img/mobile.png">
+                <h3>Esperienze Mobili Intuitive</h3>
+                <p>Creiamo app mobile coinvolgenti e intuitive che offrono esperienze utente straordinarie su piattaforme iOS e Android. Dal concept all'implementazione, lavoriamo in stretta collaborazione con i nostri clienti per trasformare le loro visioni in realtà digitali innovative.
+                Con un'attenzione particolare all'usabilità e al design centrato sull'utente, le nostre app mobile offrono un'esperienza fluida e soddisfacente che supera le aspettative degli utenti e massimizza il coinvolgimento.</p>
+            </div>
+            <div class="service-box">
+                <img class="service-img" src="../img/online.png">
+                <h3>Presenza Online Perfetta</h3>
+                <p>Realizziamo siti web accattivanti, funzionali e altamente performanti che riflettono l'identità unica dei nostri clienti e li aiutano a raggiungere i loro obiettivi commerciali. Con una combinazione di design creativo e sviluppo tecnologico avanzato, creiamo siti web che lasciano un'impressione duratura.
+                La nostra attenzione al dettaglio e l'approccio personalizzato garantiscono che ogni sito web sia ottimizzato per la massima visibilità online e un'esperienza utente superiore, generando risultati tangibili per i nostri clienti.</p>
+            </div>
+            <div class="service-box">
+                <img class="service-img" src="../img/data.png">
+                <h3>Protezione Totale dei Dati</h3>
+                <p>Offriamo soluzioni di sicurezza informatica avanzate per proteggere i dati sensibili e le risorse digitali dei nostri clienti da minacce interne ed esterne. Attraverso una combinazione di analisi approfondita dei rischi, implementazione di controlli di sicurezza e monitoraggio continuo, garantiamo la massima sicurezza e conformità.
+                La nostra esperienza e competenza nel campo della sicurezza informatica ci consentono di creare soluzioni personalizzate e scalabili che si adattano alle esigenze specifiche di ogni cliente, garantendo la massima protezione e tranquillità.</p>
+            </div>
+            <div class="service-box">
+                <img class="service-img" src="../img/ai.png">
+                <h3>Analisi Dati e AI</h3>
+                <p>Utilizziamo l'analisi dei dati e l'intelligenza artificiale per aiutare i nostri clienti a trarre valore dalle loro risorse dati, fornendo insight approfonditi e informazioni preziose per supportare decisioni strategiche e operazioni aziendali.
+                La nostra esperienza nell'analisi dei dati e nell'intelligenza artificiale ci consente di sviluppare soluzioni su misura che soddisfano le esigenze specifiche dei nostri clienti, consentendo loro di ottenere vantaggi competitivi e fare passi avanti nel loro settore.</p>
+            </div>
+            <div class="service-box">
+                <img class="service-img" src="../img/rota.jpg">
+                <h3>Digitalizzazione e Automazione</h3>
+                <p>Aiutiamo le aziende a trasformare i loro processi aziendali attraverso la digitalizzazione e l'automazione, migliorando l'efficienza operativa, riducendo i costi e creando nuove opportunità di crescita. Utilizzando tecnologie all'avanguardia e best practice di settore, supportiamo i nostri clienti in ogni fase del loro viaggio di trasformazione digitale.
+                La nostra esperienza e competenza nella digitalizzazione e nell'automazione ci consentono di fornire soluzioni su misura che massimizzano il valore per i nostri clienti, consentendo loro di rimanere competitivi e rilevanti in un mondo sempre più digitalizzato.</p>
             </div>
 
-            <div id="hero-icons" class="col-md-3 col-sm-12">
-                <ul id="icon-list">
-                    <i class="fas fa-envelope"></i>
-                    <i class="fa-brands fa-github"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-youtube"></i>
-                </ul>
+            <div>
+                <img src="../img/technomedit.png">
             </div>
 
         </div>
+
+        <div id="footer">
+            <div id="credits" class="row">
+
+                <div class="col-md-3 col-sm-6">
+                    <ul class="credits-section">
+                        <a href="#" class="a-credits"><li>linkedin</li></a>
+                        <a href="#" class="a-credits"><li>about</li></a>
+                        <a href="#" class="a-credits"><li>servizi</li></a>
+                        <a href="#" class="a-credits"><li>mission</li></a>
+                    </ul>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <ul class="credits-section">
+                        <a href="#" class="a-credits"><li>linkedin</li></a>
+                        <a href="#" class="a-credits"><li>about</li></a>
+                        <a href="#" class="a-credits"><li>servizi</li></a>
+                        <a href="#" class="a-credits"><li>mission</li></a>
+                    </ul>
+                </div>
+
+                <div id="hero-icons" class="col-md-3 col-sm-12">
+                    <ul id="icon-list">
+                        <i class="fas fa-envelope"></i>
+                        <i class="fa-brands fa-github"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-youtube"></i>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+
+        
     </div>
-
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-
-
 </body>
 </html>
