sistemato view colonne/righe nei servizi e impaginato gli abouts

--- a/src/about.html
+++ b/src/about.html
@@ -19,6 +19,7 @@
         .content{
             max-width: 100%;
             overflow-x: hidden;
+            border-radius: 10px !important;
         }
 
         table {
@@ -26,6 +27,7 @@
             border-collapse: collapse;
             animation: cascade 1s ease forwards;
             opacity: 0;
+            margin-bottom: 30px;
         }
 
         @keyframes cascade {
@@ -49,6 +51,8 @@
 
         th {
             background-color: #f2f2f2;
+            width: auto; /* VORREI ADDATTARLO ALLA DIMENSIONE DEL TESTO MA NON FUNZIONA! */
+            border-radius: 30px;
         }
     </style>
 </head>
