href / and deploy

--- a/index.html
+++ b/index.html
@@ -52,25 +52,25 @@
 	<div id="container">
 		<div id="header">
 			
-			<a href="rush.html">
+			<a href="/">
 				<div id="banner">
 					OurCompany
 				</div>
 			</a>
 
 			<ul id="header-links">
-				<a href="rush.html" class="header-link">Home</a>
-				<a href="src/about.html" class="header-link">About</a>
-				<a href="src/services.html" class="header-link">Services</a>
+				<a href="/" class="header-link">Home</a>
+				<a href="/about.html" class="header-link">About</a>
+				<a href="/services.html" class="header-link">Services</a>
 			</ul>
 
 			<div id="collapse">
 				<div class="dropdown">
 					<button class="dropbtn"><i class="fa-solid fa-bars"></i></button>
 					<div class="dropdown-content">
-						<a href="rush.html">Home</a>
-						<a href="src/about.html">About</a>
-						<a href="src/services.html">Services</a>
+						<a href="/">Home</a>
+						<a href="/about.html">About</a>
+						<a href="/services.html">Services</a>
 					</div>
 				</div>
 			</div>
@@ -86,7 +86,7 @@
 
 		<div class=".action">
 			<button id="call-to-action" class="glow-on-hover" type="button">
-				<a class="mod" href="src/services.html"><p>Click Here!</p></a>
+				<a class="mod" href="/services.html"><p>Click Here!</p></a>
 			</button>
 		</div>
 
