--- a/about.html
+++ b/about.html
@@ -61,25 +61,25 @@
 
     <div id="header">
 			
-        <a href="rush.html">
+        <a href="/">
             <div id="banner">
                 OurCompany
             </div>
         </a>
 
         <ul id="header-links">
-            <a href="../rush.html" class="header-link">Home</a>
+            <a href="/" class="header-link">Home</a>
             <a href="about.html" class="header-link">About</a>
-            <a href="../src/services.html" class="header-link">Services</a>
+            <a href="/services.html" class="header-link">Services</a>
         </ul>
 
         <div id="collapse">
             <div class="dropdown">
                 <button class="dropbtn"><i class="fa-solid fa-bars"></i></button>
                 <div class="dropdown-content">
-                    <a href="../rush.html">Home</a>
+                    <a href="/">Home</a>
                     <a href="about.html">About</a>
-                    <a href="../src/services.html">Services</a>
+                    <a href="/services.html">Services</a>
                 </div>
             </div>
         </div>
